--- a/eCommerce/src/main/resources/static/web/contact.html
+++ b/eCommerce/src/main/resources/static/web/contact.html
@@ -54,7 +54,7 @@
                         <!-- Header Top Left Start -->
                         <div class="header-top-left">
                             <p>Bienvenido a Origami</p>
-                            <p><i class="fa-solid fa-phone"><a href="tel:11-57199026">11-57199026</a></i></p>
+                            <i class="fa-solid fa-phone"><a href="tel:11-57199026">11-57199026</a></i>
                             
                         </div><!-- Header Top Left End -->
                     </div>
@@ -144,9 +144,9 @@
                                 <ul>
                                     <li><a href="index.html">HOME</a>
                                     </li>
-                                    <li><a href="shop.html">SHOP</a>
+                                    <li><a href="shop.html">Tienda</a>
                                         <ul class="sub-menu">
-                                            <li><a href="shop.html">Tienda</a></li>
+                                            <li><a href="shop.html">Ropa</a></li>
                                             <li><a href="single-product.html">Cosplay</a></li>
                                         </ul>
                                     </li>
@@ -166,7 +166,7 @@
     </div><!-- Header Section End -->
 
     <!-- Page Banner Section Start -->
-    <div class="page-banner-section section" >
+    <div class="page-banner-section section"  >
         <div class="container">
             <div class="row">
                 <div class="page-banner-content col">
@@ -188,7 +188,7 @@
             <div class="row row-30 mbn-40">
 
                <div class="contact-info-wrap col-md-6 col-12 mb-40">
-                   <h3>Ponte en contacto</h3>
+                   <h3>Contactanos</h3>
                      <p>Origami tiene una gran variedad de productos que puedes ver en nuestra tienda oficial. Además si eres cliente premium tendrás acceso a todo el nuevo catálogo que llega cada semana. Forma parte de la mayor comunidad otaku.</p>
                    <ul class="contact-info">
                        <li> 
@@ -312,7 +312,7 @@
                     </div><!-- mailchimp-alerts end -->
 
                     <h5>SIGUENOS</h5> 
-                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Instagram</a> - <a href="#">Google+</a></p>
+                    <p class="footer-social"><a href="https://www.instagram.com/origami.anime/">Facebook</a> - <a href="#">Instagram</a> - <a href="#">Google+</a></p>
 
                 </div>
 
