--- a/eCommerce/src/main/resources/static/web/shop.html
+++ b/eCommerce/src/main/resources/static/web/shop.html
@@ -34,7 +34,7 @@
 
 <body>
 
-<div class="main-wrapper">
+<div class="main-wrapper" id="app">
 
     <!-- Header Section Start -->
     <div class="header-section section">
@@ -180,11 +180,11 @@
                 <div class="col-12">
                     <div class="product-show">
                         <h4>Show:</h4>
-                        <select class="nice-select">
-                            <option>8</option>
-                            <option>12</option>
-                            <option>16</option>
-                            <option>20</option>
+                        <select class="nice-select" v-model="showProducts">
+                            <option value="8">8</option>
+                            <option value="12">12</option>
+                            <option value="16">16</option>
+                            <option value="20">20</option>
                         </select>
                     </div>
                     <div class="product-short">
@@ -198,13 +198,13 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40" v-for="product in products">
 
                     <div class="product-item">
                         <div class="product-inner">
 
                             <div class="image">
-                                <img src="assets/images/product/product-1.jpg" alt="">
+                                <img v-bind:src="product.imageURL_front" alt="">
 
                                 <div class="image-overlay">
                                     <div class="action-buttons">
@@ -219,352 +219,33 @@
 
                                 <div class="content-left">
 
-                                    <h4 class="title"><a href="single-product.html">Tmart Baby Dress</a></h4>
+                                    <h4 class="title"><a href="single-product.html">{{product.name}}</a></h4>
 
                                     <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                        <i class="fa fa-star-o"></i>
+                                        <p>{{product.animeTheme}}</p>
                                     </div>
 
-                                    <h5 class="size">Size: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
+                                    <h5 class="size">Size:
+										<span>{{product.clothesSize}}</span>
+										 <!-- <span>S</span><span>M</span><span>L</span><span>XL</span> -->
+									</h5>
+									<h5 v-if="product.color != null" style="display: inline;" class="color">
+										Color: 
+										<div class=" d-flex flex-row">
+											<span v-if="product.color.includes('black')" style="background-color: #000000"></span>
+											<span v-if="product.color.includes('blue')" style="background-color: #0271bc"></span>
+											<span v-if="product.color.includes('gray')" style="background-color: #8f8e8b"></span>
+											<span v-if="product.color.includes('purple')" style="background-color: #7a0da6"></span>
+											<span v-if="product.color.includes('green')" style="background-color: #07a371"></span>
+											<span v-if="product.color.includes('white')" style="background-color: #ffffff"></span>
+											<span v-if="product.color.includes('red')" style="background-color: #ad1717"></span>
+										</div>
+									</h5>
 
                                 </div>
 
                                 <div class="content-right">
-                                    <span class="price">$25</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-2.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html">Jumpsuit Outfits</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </div>
-
-                                    <h5 class="size">Size: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$09</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-3.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html">Smart Shirt</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </div>
-
-                                    <h5 class="size">Size: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$18</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-4.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html">Kids Shoe</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </div>
-
-                                    <h5 class="size">Size: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$15</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-5.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html"> Bowknot Bodysuit</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                    </div>
-
-                                    <h5 class="size">Talle: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$12</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-6.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html">Striped T-Shirt</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </div>
-
-                                    <h5 class="size">Talle: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$12</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-7.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html">Kislen Jak Tops</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </div>
-
-                                    <h5 class="size">Talle: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$29</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
-
-                    <div class="product-item">
-                        <div class="product-inner">
-
-                            <div class="image">
-                                <img src="assets/images/product/product-8.jpg" alt="">
-
-                                <div class="image-overlay">
-                                    <div class="action-buttons">
-                                        <button>add to cart</button>
-                                        <button>add to wishlist</button>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="content">
-
-                                <div class="content-left">
-
-                                    <h4 class="title"><a href="single-product.html">Lattic Shirt</a></h4>
-
-                                    <div class="ratting">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-o"></i>
-                                    </div>
-
-                                    <h5 class="size">Talle: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-                                    <h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
-
-                                </div>
-
-                                <div class="content-right">
-                                    <span class="price">$08</span>
+                                    <span class="price">${{product.price}}</span>
                                 </div>
 
                             </div>
@@ -697,7 +378,10 @@
 
 <!-- JS
 ============================================ -->
-
+<script src="https://kit.fontawesome.com/8872e142cf.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/vue@3"></script>
+<script src="assets/js/shop.js"></script>
 <!-- jQuery JS -->
 <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
 <!-- Migrate JS -->
