--- a/eCommerce/src/main/resources/static/web/index.html
+++ b/eCommerce/src/main/resources/static/web/index.html
@@ -48,7 +48,9 @@
                         <!-- Header Top Left Start -->
                         <div class="header-top-left">
                             <p>Bienvenido a Origami</p>
-							<i class="fa-brands fa-whatsapp"><a href="https://chat.whatsapp.com/GgeI2LllN3lHOJJxnt652v">2994137609</a></i>
+							<i class="fa-brands fa-whatsapp">
+								<a href="https://chat.whatsapp.com/GgeI2LllN3lHOJJxnt652v">2994137609</a>
+							</i>
                         </div><!-- Header Top Left End -->
                     </div>
 
@@ -230,13 +232,13 @@
 												<h5 v-if="product.color != null" style="display: inline;" class="color">
 													Color: 
 													<div class=" d-flex flex-row">
-														<span v-if="product.color.includes('')" style="background-color: #ffb2b0"></span>
-														<span v-if="product.color.includes('')" style="background-color: #0271bc"></span>
-														<span v-if="product.color.includes('')" style="background-color: #efc87c"></span>
-														<span v-if="product.color.includes('')" style="background-color: #00c183"></span>
-														<span v-if="product.color.includes('')" style="background-color: #00c183"></span>
-														<span v-if="product.color.includes('')" style="background-color: #00c183"></span>
-														<span v-if="product.color.includes('')" style="background-color: #00c183"></span>
+														<span v-if="product.color.includes('black')" style="background-color: #000000"></span>
+														<span v-if="product.color.includes('blue')" style="background-color: #0271bc"></span>
+														<span v-if="product.color.includes('grey')" style="background-color: #8f8e8b"></span>
+														<span v-if="product.color.includes('purple')" style="background-color: #7a0da6"></span>
+														<span v-if="product.color.includes('green')" style="background-color: #07a371"></span>
+														<span v-if="product.color.includes('white')" style="background-color: #ffffff"></span>
+														<span v-if="product.color.includes('red')" style="background-color: #ad1717"></span>
 													</div>
 												</h5>
 
@@ -256,7 +258,7 @@
 						</div>
 					</div>
 					
-					<div class="tab-pane fade" id="product-sale">
+					<!-- <div class="tab-pane fade" id="product-sale">
 						<div class="row mbn-40">
 
 							<div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40">
@@ -636,7 +638,7 @@
 							</div>
 
 						</div>
-					</div>
+					</div> -->
 				</div>
             </div>
 
@@ -678,25 +680,25 @@
         </div>
     </div><!-- Banner Section End -->
 
-    <!-- Product Section Start -->
+    <!-- Product limited Section  Start -->
     <div class="product-section section section-padding pt-0">
         <div class="container">
 
 			<div class="row">
 				<div class="section-title text-center col mb-30">
-					<h1>Feature Product</h1>
-					<p>All featured product find here</p>
+					<h1>Edicion Limitada</h1>
+					<!-- <p>All featured product find here</p> -->
 				</div>
 			</div>
-
-			<div class="product-slider slick-space">
+			{{limitedEdition}}
+			<div class="product-slider slick-space d-flex justify-content-between">
 				<div class="slick-slide">
 
-					<div class="product-item"  v-for="product in ">
-						<div class="product-inner">
+					<div class="product-item" >
+						<div class="product-inner" v-for="product in productsLimitedEdition">
 
 							<div class="image">
-								<img src="assets/images/product/product-5.jpg" alt="Image">
+								<img v-bind:src="product.imageURL_front" alt="Image">
 
 								<div class="image-overlay">
 									<div class="action-buttons">
@@ -711,23 +713,34 @@
 
 								<div class="content-left">
 
-									<h4 class="title"><a href="single-product.html"> Bowknot Bodysuit</a></h4>
+									<h4 class="title"><a href="single-product.html"> {{product.name}}</a></h4>
 
 									<div class="ratting">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star-half-o"></i>
+										<p>{{product.animeTheme}}</p>
 									</div>
 
-									<h5 class="size">Size: <span>S</span><span>M</span><span>L</span><span>XL</span></h5>
-									<h5 class="color">Color: <span style="background-color: #ffb2b0"></span><span style="background-color: #0271bc"></span><span style="background-color: #efc87c"></span><span style="background-color: #00c183"></span></h5>
+									<h5 class="size">Size:
+										<span>{{product.clothesSize}}</span>
+										 <!-- <span>S</span><span>M</span><span>L</span><span>XL</span> -->
+									</h5>
+									<h5 v-if="product.color != null" style="display: inline;" class="color">
+										Color: 
+										<div class=" d-flex flex-row">
+											<span v-if="product.color.includes('black')" style="background-color: #000000"></span>
+											<span v-if="product.color.includes('blue')" style="background-color: #0271bc"></span>
+											<span v-if="product.color.includes('gray')" style="background-color: #8f8e8b"></span>
+											<span v-if="product.color.includes('purple')" style="background-color: #7a0da6"></span>
+											<span v-if="product.color.includes('green')" style="background-color: #07a371"></span>
+											<span v-if="product.color.includes('white')" style="background-color: #ffffff"></span>
+											<span v-if="product.color.includes('red')" style="background-color: #ad1717"></span>
+										</div>
+									</h5>
+									
 
 								</div>
 
 								<div class="content-right">
-									<span class="price">$12</span>
+									<span class="price">${{product.price}}</span>
 								</div>
 
 							</div>
@@ -790,8 +803,8 @@
 
                         <div class="icon"><img src="assets/images/feature/feature-2.png" alt="Image"></div>
                         <div class="content">
-                            <h3>Money Back Guarantee</h3>
-                            <p>Back within 25 days</p>
+                            <h3>Reembolsos</h3>
+                            <p>Devoluciones en 25 dias</p>
                         </div>
 
                     </div>
@@ -935,11 +948,11 @@
 
 
 
-<!-- jQuery JS -->
-
+<script src="https://kit.fontawesome.com/8872e142cf.js" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3"></script>
 <script src="assets/js/index.js"></script>
+<!-- jQuery JS -->
 <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
 <!-- Migrate JS -->
 <script src="assets/js/vendor/jquery-migrate-3.3.2.min.js"></script>
