--- a/eCommerce/src/main/resources/static/web/contact.html
+++ b/eCommerce/src/main/resources/static/web/contact.html
@@ -174,7 +174,7 @@
                     <h1>Contactanos</h1>
                     <ul class="page-breadcrumb">
                         <li><a href="index-3.html">Inicio</a></li>
-                        <li><a href="contact.html">Contactanos</a></li>
+                        <li><a href="contact.html">Contactanos</a></li>d
                     </ul>
 
                 </div>
