--- a/eCommerce/src/main/resources/static/web/contact.html
+++ b/eCommerce/src/main/resources/static/web/contact.html
@@ -77,15 +77,15 @@
                             <div class="col mt-10 mb-10">
                                 <!-- Header Language Currency Start -->
                                 <ul class="header-lan-curr">
-                                    <li><a href="#">eng</a>
+                                    <li><a href="#">es</a>
                                         <ul>
                                             <li><a href="#">english</a></li>
                                             <li><a href="#">spanish</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">$usd</a>
+                                    <li><a href="#">$ARS</a>
                                         <ul>
-                                            <li><a href="#">dollar</a></li>
+                                            <li><a href="#">UDS</a></li>
                                         </ul>
                                     </li>
                                 </ul><!-- Header Language Currency End -->
@@ -123,7 +123,7 @@
                                 <div class="main-menu">
                                     <nav>
                                         <ul>
-                                            <li><a href="index.html">HOME</a>
+                                            <li><a href="index.html">INICIO</a>
                                             </li>
                                             <li><a href="shop.html">Tienda</a>
                                                 <ul class="sub-menu">
@@ -207,7 +207,7 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40 ">
+                        <div class="footer-widget col-lg-4 col-md-6 col-12 mb-40">
                             <h4 class="title">CONTACTO</h4>
                             <p class="text-light">1425 Los Polvorines <br /> Provincia de Buenos Aires</p>
                             <p> <a class="text-light" href="tel:2995451326">2995451326</a><a class="text-light"
@@ -216,7 +216,7 @@
                                     class="text-light" href="#">www.origami.com</a></p>
                         </div>
 
-                        <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
+                        <div class="footer-widget col-lg-4 col-md-6 col-12 mb-40">
                             <h4 class="title text-light">PRODUCTOS</h4>
                             <ul>
                                 <li><a class="text-light" href="ropa">Productos Destacados</a></li>
@@ -237,7 +237,7 @@
 						</ul>
 					</div>	 -->
 
-                        <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
+                        <div class="footer-widget col-lg-4 col-md-6 col-12 mb-40">
                             <h5 class="title text-light">SÍGUENOS!</h5>
                             <p class="footer-social text text-light">
                                 <a class="text-light" href="https://www.instagram.com/origami.anime/"> <i
