--- a/eCommerce/src/main/resources/static/web/cosplay.html
+++ b/eCommerce/src/main/resources/static/web/cosplay.html
@@ -200,11 +200,11 @@
                                 </div>
                                 <div class="content">
                                     <div class="content-left">
-                                        <h4 class="title"><a
+                                        <h4 class="title marginBoxR"><a
                                                 v-bind:href=`single-product.html?id=${product.id}`>{{product.name}}</a>
                                         </h4>
-                                        <div class="ratting">
-                                            <p>{{product.animeTheme}}</p>
+                                        <div class="ratting ">
+                                            <p class="marginBoxR">{{product.animeTheme}}</p>
                                         </div>
                                         <h5 class="size">Size:
                                             <span v-for="size in product.size">{{size}}</span>
