--- a/eCommerce/src/main/resources/static/web/cart.html
+++ b/eCommerce/src/main/resources/static/web/cart.html
@@ -161,7 +161,6 @@
 
                     <!-- Page Banner Section Start -->
                     <div class=" section" id="banner-Cart">
-                        <!-- style="background-image:url(../web/assets/images/hero/attack-on-titan.png)" -->
                         <div class="container">
                             <div class="row">
                                 <div class="page-banner-content col">
@@ -176,8 +175,11 @@
 
                     <!-- Page Section Start -->
                     <div class="page-section section section-padding">
-                        <div class="container" v-if="storageCarrito.length == 0">
-                            <p class="display-5">No hay productos en el carrito</p>
+                        <div class="container d-flex flex-column justify-content-center align-items-center" v-if="storageCarrito.length == 0">
+                            <p class="display-5"> No hay productos en el carrito</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
+                                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                            </svg> 
                         </div>
                         <div class="container" v-else>
 
@@ -244,7 +246,7 @@
                                                         <th>Total</th>
                                                         <td>
                                                             <strong><span class="amount"> $
-                                                                    {{precioTotal}}</span></strong>
+                                                                    {{precioTotalCarrito}}</span></strong>
                                                         </td>
                                                     </tr>
                                                 </tbody>
